--- a/todo
+++ b/todo
@@ -4,3 +4,8 @@
 4. Need to debug deterministic cache size - check if cache values are the same every run (save cache after run 1, compare to cache after run 1 in next run)
 5. Could it be that first 400 are new, then in next run, 320 are new (-20% elitism) and so on. Then everything else added is new?
 6. Need to add in sin, cos , log, exp functions
+
+Bugs to fix
+1. results of 0 very common - check why
+2. Safe division
+3. Pre ops
