--- a/todo
+++ b/todo
@@ -2,6 +2,5 @@ todo :
 - Make min depth 2
 - Sensible initialisation from paper
 - Parallelise / optimise code - currently bottleneck in is evaluating fitness in this line -> fitnesses = [fitness(g, X, y, cfg.max_depth) for g in population]
-- Need to debug deterministic cache size - check if cache values are the same every run (save cache after run 1, compare to cache after run 1 in next run)
-- Could it be that first 400 are new, then in next run, 320 are new (-20% elitism) and so on. Then everything else added is new?
-- Need to add in sin, cos , log, exp functions
+- Evaluation of 10 best phenotypes on test set - use RMSE instead of MAE (to be consistent with evaluation from gen to gen), also calculate the average difference in dollars between pred and actual
+- Unit test everything thoroughly
